# Haskell-Workspace

./: ExercisesChapter4Lists.hs  README.md
Game/: Main.hs  sdl.hs
MenuTest/: Test.hi  Test.hs
Pictures/Haskell Icon/: haskell.psd
Project 1/: MainMenu.hs  MathOperations.hs
Real-World-Haskell/Chapter 1 - Getting Started/: WordCount.hs
Real-World-Haskell/Chapter1-Getting-Started/: WordCount.hs
Real-World-Haskell/Chapter2-Types-and-Functions/: RoundToEven.hs  add.hs  lastButOne.hs  myDrop.hs
Real-World-Haskell/Chapter3-Defining-Types,-Streamlining-Functions/: AlgebraicVector.hs  AltCustomer.hs  BadIndent.hs  BadPattern.hs  BadTree.hs  BogusPattern.hs  BookStore.hs  Braces.hs  ExercisesChapter3.hs  GlobalVariable.hs  GoodIndent.hs  Guard.hs  Indentation.hs  Lending.hs  ListADT.hs  LocalFunction.hs  MySecond.hs  NestedLets.hs  NoteAboutTabsVsSpaces.hs  Nullable.hs  Roygbiv.hs  ShapeUnion.hs  Tree.hs  add.hs  letwhere.hs
Real-World-Haskell/Chapter4-Functional-Programming/: Adler32.hs  EfficientList.hs  ExercisesChapter4Lists.hs  Filter.hs  InfixNotation.hs  IntParse.hs  ListsFunctions.hs  Map.hs  Plus.hs  SeveralListsAtOnceFunctions.hs  StringHandlingFunctions.hs  Sum.hs  inputTextExample.txt  inputTextExample2.txt
Real-World-Haskell/Chapter5-Writing-a-Library-and-JSON-Data/: ExportingNothing.hs  Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hi  SimpleJSON.hs
Real-World-Haskell/Chapter5-Writing-a-Library-and-JSON-Data/mypretty/: Setup.hs  mypretty.cabal
Real-World-Haskell/Chapter7-IO/: BasicIO.hs  (+2 more)
Test/: ExampleTest.hs
(+38 files in other folders)
